# Computational-Fluid-Dynamics

./: Computational Fluid Dynamics.sln  Makefile  README.md  solve_perf_gas
11Gibbs/: gibbs_minimizer  main.cpp
2D Perfect Gas FVS Library/: 2D Perfect Gas FVS Library.cpp  2D Perfect Gas FVS Library.vcxproj  2D Perfect Gas FVS Library.vcxproj.filters  2DPerfectGasFVSLibrary.h  CMakeLists.txt
2D Real Gas FVS Library/: 2D Real Gas FVS Library.cpp  2D Real Gas FVS Library.vcxproj  2D Real Gas FVS Library.vcxproj.filters  2DRealGasFVSLibrary.h  CMakeLists.txt
2D_Perf_Gas_FVS/: perf_gas_fvs.cpp  perf_gas_fvs.hpp
2D_Real_Gas_FVS/: real_gas_fvs.hpp
Gibbs Free-Energy Minimizer/: 11-Species Gibbs Minimizer.cpp  CMakeLists.txt  Gibbs Free-Energy Minimizer.vcxproj  Gibbs Free-Energy Minimizer.vcxproj.filters
Grid Generator/: Grid Generator.cpp  Grid Generator.vcxproj  Grid Generator.vcxproj.filters  GridGenerator.h
GridGenerator/: grid_generator.cpp  grid_generator.hpp
Linear Algebra Library/: Linear Algebra Library.cpp  Linear Algebra Library.vcxproj  LinearAlgebra.h
LinearAlgebra/: linear_algebra.cpp  linear_algebra.hpp
PerfGasSolver/: main.cpp  perfgassolver
Perfect Gas Solver/: Perfect Gas Solver.cpp  Perfect Gas Solver.vcxproj  Perfect Gas Solver.vcxproj.filters
Real Gas Solver/: CMakeLists.txt  Real Gas Solver.cpp  Real Gas Solver.vcxproj  Real Gas Solver.vcxproj.filters
gibbs/: gibbs_minimizer  main.cpp
gridlib/: grid.cpp  grid.hpp
latex/: equations.fdb_latexmk  equations.fls  equations.tex
linalglib/: linalg.cpp  linalg.hpp
perfgaslib/: perfgas.cpp  perfgas.hpp
perfgassolver/: main.cpp
programs/: FileReader  filereader.asv  filereader.m  gibbs_minimizer  solve_perf_gas  solve_real_gas  test_program
realgas/: main.cpp
realgaslib/: realgas.cpp  realgas.hpp
realgassolver/: main.cpp
testing/: main.cpp  program
writefilelib/: writefile.cpp  writefile.hpp
